--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.19"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
